# cidepint

./: README.md
admin/: app.py  pyproject.toml
admin/src/core/: database.py  mail.py  seeds.py
admin/src/core/admin_instituciones/: __init__.py  historial.py
admin/src/core/api/: __init__.py  api_user.py
admin/src/core/auth/: __init__.py  user.py
admin/src/core/configuracion/: __init__.py  informacion_contacto.py  mantenimiento.py
admin/src/core/instituciones/: __init__.py  institucion.py
admin/src/core/services/: __init__.py  services.py
admin/src/core/users/: __init__.py  permission.py  role.py
admin/src/forms/: admin_institucion_form.py  institucion_form.py  maintenance_form.py  registro_form.py  servicios_form.py  users_form.py
admin/src/web/: __init__.py  commands.py  config.py  error.py  error_handlers.py  jinja.py  jwt.py  oauth.py  routes.py
admin/src/web/api/: api.py
admin/src/web/controllers/: administracion_instituciones.py  auth.py  home.py  instituciones.py  maintenance.py  services.py  users.py
admin/src/web/helpers/: auth.py  institutions.py  maintenance.py
admin/src/web/schemas/: auth.py  institutions.py  service_type.py  services.py
admin/src/web/templates/: error.html  home.html  layout.html
admin/src/web/templates/admin_usuarios/: asignar.html  buscar.html  historial.html  select.html
admin/src/web/templates/auth/: confirmar_registro.html  login.html  register.html
admin/src/web/templates/configuraciones/: info_contacto.html  maintenance_form.html  paginado.html  update_info.html
admin/static/: error.css  style.css
(+41 files in other folders)
